chore(core): fixing latest app layout bugs

--- a/projects/core/shared/layout/app-layout.component.scss
+++ b/projects/core/shared/layout/app-layout.component.scss
@@ -244,7 +244,6 @@ mat-sidenav {
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    gap: 0.75rem;
     text-align: left;
   }
 
